--- a/app/src/main/res/layout/item_list_employee.xml
+++ b/app/src/main/res/layout/item_list_employee.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:orientation="horizontal">
+              android:layout_height="match_parent"
+                android:padding="10dp">
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -20,6 +19,4 @@
                 android:id="@+id/txt_id"
                 android:padding="5dp"
                 android:layout_weight="0.7"/>
-    </LinearLayout>
-
 </LinearLayout>
