--- a/app/src/main/res/layout/content_item_employee.xml
+++ b/app/src/main/res/layout/content_item_employee.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-android:layout_marginStart="7dp"
-android:layout_marginEnd="7dp">
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="7dp"
+        tools:context=".views.EmployeeDetailFragment">
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_guardar"
+            android:text="Guardar"
+            android:enabled="false"/>
+
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
     android:orientation="horizontal">
         <TextView
@@ -56,5 +65,31 @@ android:layout_marginEnd="7dp">
             android:text="Email"
             android:id="@+id/txt_email"
             android:padding="5dp"/>
+    <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nuevo"
+            android:id="@+id/radio_nuevo"/>
+
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre Empleado"
+                android:padding="5dp"
+                android:layout_weight="0.3"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Id Empleado"
+                android:padding="5dp"
+                android:layout_weight="0.7"/>
+
+    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/section_list_sub_employees"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
 </LinearLayout>
