--- a/app/src/main/res/layout/item_list_employee.xml
+++ b/app/src/main/res/layout/item_list_employee.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
+              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
                 android:padding="10dp">
-        <TextView
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nombre"
-                android:id="@+id/txt_name"
-                android:padding="5dp"
-                android:layout_weight="0.3"/>
+                android:orientation="horizontal">
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Nombre"
+                        android:id="@+id/txt_name_tabla"
+                        android:padding="5dp"
+                        android:layout_weight="0.3"/>
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Id"
-                android:id="@+id/txt_id"
-                android:padding="5dp"
-                android:layout_weight="0.7"/>
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Id"
+                        android:id="@+id/txt_id_tabla"
+                        android:padding="5dp"
+                        android:layout_weight="0.7"/>
+        </LinearLayout>
+        <View
+                style="@style/divisor_listas"/>
+
 </LinearLayout>
